@@ -26,5 +26,6 @@ $phpsvnclient = new phpsvnclient($url);
 
 //delete('../dev');
 //$phpsvnclient->set_job_for_exec_after_completition(dirname(__FILE__)."/../dev/upload/parsefile.php");
-$phpsvnclient->createOrUpdateWorkingCopy('branches/TestVersion', dirname(__FILE__) . '/../dev');
+//$phpsvnclient->createOrUpdateWorkingCopy('branches/TestVersion', dirname(__FILE__) . '/../dev');
+$phpsvnclient->createOrUpdateWorkingCopy('trunk/upload', dirname(__FILE__) . '/CHECKOUT', true);
 ?>
