@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-private xmlns="http://www.netbeans.org/ns/project-private/1">
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/1"/>
-    <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/1">
-        <file>file:/C:/HomServ/home/first/exampleDiffVersions.php</file>
-        <file>file:/C:/HomServ/home/first/phpsvnclient.php</file>
-    </open-files>
 </project-private>
